syntax = "proto3";

package o5.dante.v1.service;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/page.proto";
import "j5/list/v1/query.proto";
import "o5/dante/v1/dead_message.proto";

option go_package = "github.com/pentops/dante/gen/o5/dante/v1/dante_spb";

service DeadMessageQueryService {
  option (j5.ext.v1.service).state_query.entity = "deadmessage";
  rpc GetDeadMessage(GetDeadMessageRequest) returns (GetDeadMessageResponse) {
    option (google.api.http) = {get: "/dante/v1/q/message/{message_id}"};
    option (j5.ext.v1.method).state_query.get = true;
  }

  rpc ListDeadMessages(ListDeadMessagesRequest) returns (ListDeadMessagesResponse) {
    option (google.api.http) = {get: "/dante/v1/q/messages"};
    option (j5.ext.v1.method).state_query.list = true;
  }

  rpc ListDeadMessageEvents(ListDeadMessageEventsRequest) returns (ListDeadMessageEventsResponse) {
    option (google.api.http) = {get: "/dante/v1/q/message/{message_id}/events"};
    option (j5.ext.v1.method).state_query.list_events = true;
  }
}

message GetDeadMessageRequest {
  // when not set, returns the next unhandled message
  optional string message_id = 1 [(buf.validate.field).string.uuid = true];
}

message GetDeadMessageResponse {
  o5.dante.v1.DeadMessageState message = 1 [(buf.validate.field).required = true];
  repeated o5.dante.v1.DeadMessageEvent events = 2;
}

message ListDeadMessagesRequest {
  j5.list.v1.PageRequest page = 100;
  j5.list.v1.QueryRequest query = 101;
}

message ListDeadMessagesResponse {
  repeated o5.dante.v1.DeadMessageState messages = 1;

  j5.list.v1.PageResponse page = 100;
}

message ListDeadMessageEventsRequest {
  string message_id = 1 [(buf.validate.field).string.uuid = true];

  j5.list.v1.PageRequest page = 100;
  j5.list.v1.QueryRequest query = 101;
}

message ListDeadMessageEventsResponse {
  repeated o5.dante.v1.DeadMessageEvent events = 1;

  j5.list.v1.PageResponse page = 100;
}
